# N2N-Client-py

./: .gitignore  How-To-Use.md  How-To-Use.xmind  LICENSE  N2N  README.html  README.md  ServerList_Example.csv  build.py  config.local.ini  config.local.linux.ini  config.local.linux.json  config.local.win.ini  config.local.win.json  edge  edge_upx  history.json  local_list.yml  log.ini  n2n_client.py  n2n_client.ui  n2n_client_linux.py  n2n_client_win.py  n2n_config.ini  pyproject.toml  requirements.txt  start.sh  update.bat  update.py  update.sh  url_config.ini
.circleci/: config.yml
Ver/: local.ini  server.ini
lang/: en_us.json  global.json  zh_cn.json
linux/: config.local.linux.json  config.local.linux.yml  n2n_client_linux.py  requirements.txt  update.sh
n2n-client-latest/: README.md
n2n-client-latest/Bat/: update.bat
n2n-client-latest/Ver/: local.ini
update/Bat/: update.bat  update.sh
win/: config.local.win.json  config.local.win.yml  n2n_client_win.py  update.py
