[project]
name = "N2N-Client-NG"
version = "2.0.4"
description = ""
authors = [
    {name = "Nya-WSL",email = "support@nya-wsl.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nicegui (>=2.21.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pywebview (>=5.4,<6.0)",
    "pyinstaller (>=6.14.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
